# blackpill

./: .gitignore  CMakeLists.txt  f411re.ioc
Inc/: main.h
Src/: freertos.c  gpio.c  main.c  usbd_conf.c
mod/: test.c
